--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,8 +1,9 @@
 {
-  "name": "Mouse Dictionary",
-  "description": "Mouse Dictionary",
+  "name": "Mouse Dictionary(Beta)",
+  "description": "__MSG_appDesc__",
+  "default_locale": "ja",
   "author": "wtetsu",
-  "version": "1.1.8",
+  "version": "1.1.8.0",
   "options_ui": {
     "page": "options/options.html",
     "open_in_tab": true
