--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "@babel/polyfill": "^7.0.0",
     "hogan.js": "^3.0.2",
     "react": "^16.6.3",
-    "react-dom": "^16.6.3",
     "react-color": "^2.14.1",
-    "sprintf-js": "^1.1.1",
-    "sweetalert": "^2.1.2"
+    "react-dom": "^16.6.3",
+    "sprintf-js": "^1.1.2",
+    "sweetalert": "^2.1.2",
+    "uniqlist": "1.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.2.0",
@@ -41,7 +42,7 @@
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "copy-webpack-plugin": "^4.6.0",
-    "eslint": "^5.9.0",
+    "eslint": "^5.10.0",
     "eslint-plugin-react": "^7.11.1",
     "jest": "^23.6.0",
     "milligram": "^1.3.0",
