--- a/static/manifest.json
+++ b/static/manifest.json
@@ -7,7 +7,7 @@
     "page": "options/options.html",
     "open_in_tab": true
   },
-  "permissions": ["storage", "unlimitedStorage", "activeTab"],
+  "permissions": ["storage", "unlimitedStorage", "activeTab", "https://*/*"],
   "background": {
     "scripts": ["background.js"],
     "persistent": false
@@ -23,12 +23,5 @@
     "128": "icon128.png"
   },
   "web_accessible_resources": ["data/*.json"],
-  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
-  "content_scripts": [
-    {
-      "matches": ["http://*/*", "https://*/*"],
-      "all_frames": true,
-      "js": ["frame.js"]
-    }
-  ]
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
